Fixed vw issue on small screens

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ ul {
 body {
     background-color: #000;
     color: #fff;
+    position: absolute;
 }
 .nav-link {
     color: #000;
@@ -48,6 +49,7 @@ body {
 .section {
     min-height: 100vh;
     padding-top: 70px;
+    display: block;
 }
 h1 {
     font-size: 50px;
@@ -240,16 +242,15 @@ button:hover {
     }
     .section-content {
         flex-direction: column;
-        width: 100%;
+        width: 90%;
     }
     .section-title {
         margin: 30px 0 30px 0;
     }
     .round-img {
-        margin-bottom: 25px;
+        margin: 0 auto 25px auto;
     }
     .section-text {
-        /* margin: 25px 0 0 0; */
         text-align: center;
     }
     .contact-list {
@@ -258,7 +259,7 @@ button:hover {
     .project-container {
         flex-direction: column;
         align-items: center;
-        width: 400px;
+        width: 90%;
     }
     .project-img {
         width: 400px;
@@ -279,6 +280,6 @@ button:hover {
   }
   @media only screen and (max-width: 410px) {
     .project-img {
-        width: 200px;
+        width: 300px;
     }
   }
